--- a/src/UI/Login.form
+++ b/src/UI/Login.form
@@ -67,7 +67,7 @@
     <Component class="javax.swing.JTextField" name="userName">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="2"/>
-        <Property name="text" type="java.lang.String" value="priyesh2891@gmail.com"/>
+        <Property name="text" type="java.lang.String" value="admin@gmail.com"/>
         <Property name="name" type="java.lang.String" value="username" noResource="true"/>
       </Properties>
       <Events>
