--- a/src/UI/FoodCategory.form
+++ b/src/UI/FoodCategory.form
@@ -105,7 +105,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Add food category"/>
+            <Property name="text" type="java.lang.String" value="Create"/>
             <Property name="name" type="java.lang.String" value="LoginBtn" noResource="true"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[122, 29]"/>
