--- a/src/UI/ShopeDetails.form
+++ b/src/UI/ShopeDetails.form
@@ -195,7 +195,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Add Shop"/>
+        <Property name="text" type="java.lang.String" value="Create"/>
         <Property name="name" type="java.lang.String" value="LoginBtn" noResource="true"/>
       </Properties>
       <Events>
