--- a/src/UI/StaffPanel.form
+++ b/src/UI/StaffPanel.form
@@ -76,7 +76,7 @@
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Create Food Type">
+            <TitledBorder title="Create Staff Details">
               <Color PropertyName="color" blue="66" green="66" red="66" type="rgb"/>
             </TitledBorder>
           </Border>
@@ -154,7 +154,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Add Staff"/>
+            <Property name="text" type="java.lang.String" value="Create"/>
             <Property name="name" type="java.lang.String" value="LoginBtn" noResource="true"/>
           </Properties>
           <Events>
